Remove usages of Apache Commons (#91)